syntax = "proto3";
package cellphone;


option go_package = "/cellphone";

service CellphoneService {
  rpc Get (GetRequest) returns (GetResponse);
}

message GetRequest {
  uint64 cellphone = 1;
}

message GetResponse {
  uint64 code = 1;
  string msg = 2;   // for error
  Cellphone data = 3;
}

message Cellphone {
  uint64 id = 1;
  uint64 cellphone = 2;
}